<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download">Download </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="notification_Channel">256</string>
    <string name="fileDownloaded">File Downloaded</string>
    <string name="chech_status">Check Status</string>
    <string name="file_name">File Name</string>
    <string name="status">Status:</string>
    <string name="ok">Ok</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="looadingapp_current_repository_by_udacity">LooadingApp - Current Repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe Http client for Android and Java by Square, Inc</string>
    <string name="Success">Success</string>
    <string name="Fail">Fail</string>
    <string name="pleaseSelectOption">Please Select Option</string>
</resources>
